--- a/.github/workflows/applitools.yml
+++ b/.github/workflows/applitools.yml
@@ -15,11 +15,11 @@ env:
   APPLITOOLS_BATCH_ID: ${{ github.event.pull_request.head.sha || github.sha }}
   
   # APPLITOOLS_BATCH_NAME: Run ${{ github.run_number }} ${{ github.ref_name }} ${{ github.head_ref }} ${{ github.base_ref }} ${{ github.event.pull_request.head.sha }}
-  APPLITOOLS_BATCH_NAME: ${{ github.ref_name }} ${{ github.sha }} ${{ github.event_name }}
+  APPLITOOLS_BATCH_NAME: ${{ github.head_ref }} ${{ github.sha }} ${{ github.event_name }}
   APPLITOOLS_SERVER_URL : "https://eyesapi.applitools.com"
-  APPLITOOLS_BRANCH: ${{ github.repository }}--${{ github.head_ref }}
+  APPLITOOLS_BRANCH: ${{ github.repository }}/${{ github.head_ref }}
   # APPLITOOLS_BRANCH: ${{ github.repository }}/${{ github.ref_name }}
-  APPLITOOLS_PARENT_BRANCH: ${{ github.repository }}--${{ github.base_ref }}
+  APPLITOOLS_PARENT_BRANCH: ${{ github.repository }}/${{ github.base_ref }}
   REPOSITORY: ${{ github.repository }}
   ACTION_REF: ${{ github.action_ref }}
   BASE_REF: ${{ github.base_ref }}
