--- a/.github/workflows/applitools.yml
+++ b/.github/workflows/applitools.yml
@@ -52,7 +52,7 @@ jobs:
           with:
             node-version: ${{ matrix.node-version }}
         
-        - run: npm install
+        - run: npm ci
         - run: npm install chromedriver --detect_chromedriver_version --no-save
         
       # < to run headed>
