--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -4,9 +4,9 @@ on:
    # schedule:
    #     - cron:  '*/15 * * * *'   
    #  push:
-     pull_request:
-      types: [edited, opened, reopened]
-   # workflow_dispatch:
+   #  pull_request:
+   #   types: [edited, opened, reopened]
+    workflow_dispatch:
    
 env:
   APPLITOOLS_API_KEY: ${{ secrets.APPLITOOLS_API_KEY_DEMO_1 }}
